adjusted auth module name
