# src/auth/auth.controller.ts
@@ -1,16 +1,16 @@
 import { Body, Controller, ForbiddenException, Get, HttpException, Post, Request, UseGuards } from '@nestjs/common';
-import { LoginService } from './login.service';
 import { LoginDTO } from './dto/login.dto';
-import { AuthGuard } from './login.guard';
+import { AuthGuard } from './auth.guard';
+import { AuthService } from './auth.service';
 
-@Controller('login')
-export class LoginController {
-  constructor(private readonly loginService: LoginService) {}
+@Controller()
+export class AuthController {
+  constructor(private readonly authService: AuthService) {}
 
-  @Post()
+  @Post('login')
   async(@Body() data: LoginDTO){
     try {
-      return this.loginService.authorize(data);
+      return this.authService.signIn(data);
     } catch (error) {
       throw new ForbiddenException('Erro de autoização...')
     }
